// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFundsForm should emit amount onChange event 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="Form"
  >
    <div
      data-testid="ReceiveFundsForm"
    >
      <div
        class="mt-8 space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              10…
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr pr-20"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="ReceiveFundsForm__amount"
                  name="amount"
                  placeholder="Amount"
                  type="text"
                  value="10"
                />
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="smartbridge"
          >
            Smartbridge
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="ReceiveFundsForm__smartbridge"
                name="smartbridge"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="InputCounter__counter"
                >
                  0/255
                </span>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ReceiveFundsForm should emit smartbridge onChange event 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="Form"
  >
    <div
      data-testid="ReceiveFundsForm"
    >
      <div
        class="mt-8 space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr pr-20"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="ReceiveFundsForm__amount"
                  name="amount"
                  placeholder="Amount"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="smartbridge"
          >
            Smartbridge
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="ReceiveFundsForm__smartbridge"
                name="smartbridge"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="InputCounter__counter"
                >
                  4/255
                </span>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ReceiveFundsForm should not show smartbridge if is not supported by network 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="Form"
  >
    <div
      data-testid="ReceiveFundsForm"
    >
      <div
        class="mt-8 space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr pr-20"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="ReceiveFundsForm__amount"
                  name="amount"
                  placeholder="Amount"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ReceiveFundsForm should render 1`] = `
<DocumentFragment>
  <form
    class="space-y-5"
    data-testid="Form"
  >
    <div
      data-testid="ReceiveFundsForm"
    >
      <div
        class="mt-8 space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr pr-20"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="ReceiveFundsForm__amount"
                  name="amount"
                  placeholder="Amount"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="smartbridge"
          >
            Smartbridge
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="FormLabel__optional"
            >
              optional
            </span>
          </label>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="ReceiveFundsForm__smartbridge"
                name="smartbridge"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="InputCounter__counter"
                >
                  0/255
                </span>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
